--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -44,10 +44,6 @@
     right: 0;
 }
 
-h1.example-app-name {
-    margin-left: 8px;
-}
-
 .sidenav-container {
     /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
        causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
@@ -55,18 +51,18 @@ h1.example-app-name {
 }
 
 .sn-text {
-    padding-left: 1em;
+    padding-left: 1.2em;
     padding-right: 1em;
-    color: dimgray;
+    color: #585858;
     font-weight: bold;
-    font-size: 12pt;
+    font-size: 13pt;
 }
 
 .sn-icon {
-    padding-left: 0.5em;
-    color: dimgray;
+    padding-left: 0.6em;
+    color: #FFC107;
 }
 
 .active {
-    background-color: #f6f6a5;
+    background-color: #f6f6f6;
 }
