--- a/src/app/requests/requests.component.html
+++ b/src/app/requests/requests.component.html
@@ -1,5 +1,5 @@
-<div style="padding: 100px; alignment: center" *ngIf="requests.length">
-    <div class="card-container" *ngFor="let r of requests" style="max-width: 900px">
+<div style="padding: 100px" *ngIf="requests.length">
+    <div class="card-container" *ngFor="let r of requests">
         <mat-card class="card">
             <mat-card-title class="pad">{{r}}</mat-card-title>
             <mat-card-content style="padding-left: 1em;">
