--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -66,3 +66,10 @@
 .active {
     background-color: #f6f6f6;
 }
+
+.name {
+    font-size: 18px;
+    font-family: psans-bold, sans-serif;
+    padding-top: 1em;
+    margin-right: 0px;
+}
