--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,10 @@
         <button mat-mini-fab [matMenuTriggerFor]="usermenu">
             <img src="{{user.photoUrl}}" width="100%" style="margin-top: -0.575em">
         </button>
-        <mat-menu #usermenu>
-            <a mat-menu-item routerLink="settings">Settings</a>
+        <mat-menu #usermenu style="border-radius: 10em">
+            <span class="name">{{user.name}}</span>
+            <mat-divider></mat-divider>
+            <a mat-menu-item routerLink="settings">SettingsSettingsSettingsSettingsSettings</a>
             <a mat-menu-item routerLink="help">Help</a>
             <a mat-menu-item (click)="signOut()">Log Out</a>
         </mat-menu>
