--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div class="container" style="height: 7.8vh; margin: -0.5em -0.5em 0;">
         <mat-toolbar color="primary" class="app-toolbar">
             <img src="../assets/images/slipmate-gray.png" height="50vh">
-            <span style="flex: 1; text-align: center; font-size: 20px">Welcome to Slipmate! Please click below to sign in.</span>
+            <span style="flex: 1; text-align: center; font-size: 20px">{{this.welcome}}</span>
             <img src="../assets/images/woodside.png" height="50vh">
         </mat-toolbar>
     </div>
