--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,9 +32,8 @@
                     <mat-card class="card link yellow">
                         <mat-card class="card link white">
                             <mat-card-content style="padding: 1em 1em 1.2em;">
-                                <span>Sign in with
-                                    <img src="../assets/images/google.png" height="80" style="margin-bottom: -23px">
-                                </span>
+                                Sign in with
+                                <img src="../assets/images/google.png" height="80" style="margin-bottom: -23px">
                             </mat-card-content>
                         </mat-card>
                     </mat-card>
