--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,9 +53,9 @@
     <div class="container" style="height: 30vh; margin: -0.5em -0.5em 0; overflow-y: hidden; overflow-x: hidden;">
         <mat-toolbar color="primary" class="app-toolbar" style="height: 30vh">
             <mat-toolbar-row>
-                <img src="../assets/images/slipmate-gray.png" height="70">
+                <img src="../assets/images/slipmate-gray.png" height="65">
                 <span style="flex: 1; text-align: center; font-size: 20px"></span>
-                <img src="../assets/images/woodside.png" height="50">
+                <img src="../assets/images/woodside.png" height="45">
             </mat-toolbar-row>
             <mat-toolbar-row>
                 <mat-list>
@@ -78,7 +78,13 @@
             </mat-toolbar-row>
         </mat-toolbar>
     </div>
-    <div style="display: flex; height: 70vh; margin: 0 -0.5em -0.5em;">
-        <a href="" (click)="signIn()" class="m-main m-link" style="background-color: whitesmoke; color: darkorange;">Sign-in</a>
+    <div style="height: 70vh; margin: 0 -0.5em -0.5em; background-color: lightgray">
+        <div class="card-container" style="padding-top: 11vh">
+            <mat-card class="card" style="padding: 5vh; background-color: whitesmoke">
+                <mat-card-content style="padding: 1em 1em 1.2em; font-size: 50px; color: darkorange; text-align: center">
+                    Sign in
+                </mat-card-content>
+            </mat-card>
+        </div>
     </div>
 </div>
