--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <div *ngIf="!loggedIn">
-    <button mat-raised-button (click)="signInWithGoogle()">Login</button>
+<!--    <button mat-raised-button (click)="signInWithGoogle()">Login</button>-->
 </div>
 <div class="container" *ngIf="loggedIn">
     <mat-toolbar color="primary" class="app-toolbar">
