mobile sign in button works now lol

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,7 +82,7 @@
     <div style="height: 70vh; margin: 0 -0.5em -0.5em; background-color: lightgray">
         <div class="card-container" style="padding-top: 11vh">
             <mat-card class="card" style="padding: 5vh; background-color: whitesmoke">
-                <mat-card-content style="padding: 1em 1em 1.2em; font-size: 50px; color: darkorange; text-align: center">
+                <mat-card-content style="padding: 1em 1em 1.2em; font-size: 50px; color: darkorange; text-align: center" (click)="signIn()">
                     Sign in
                 </mat-card-content>
             </mat-card>
