add api service to versioning

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
         <mat-menu #usermenu style="border-radius: 10em">
             <span class="name">{{user.name}}</span>
             <mat-divider></mat-divider>
-            <a mat-menu-item routerLink="settings">SettingsSettingsSettingsSettingsSettings</a>
+            <a mat-menu-item routerLink="settings">Settings</a>
             <a mat-menu-item routerLink="help">Help</a>
             <a mat-menu-item (click)="signOut()">Log Out</a>
             <a mat-menu-item (click)="testCreate()">Create</a>
