--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -65,11 +65,12 @@
 
 .active {
     background-color: #f6f6f6;
+    color: dodgerblue;
 }
 
 .name {
     font-size: 18px;
     font-family: psans-bold, sans-serif;
     padding-top: 1em;
-    margin-right: 0px;
+    margin-right: 0;
 }
