--- a/src/app/requests/requests.component.html
+++ b/src/app/requests/requests.component.html
@@ -21,6 +21,6 @@
 
 <div style="padding: 100px; alignment: center" *ngIf="!requests.length">
     <mat-card class="card">
-        <mat-card-title style="padding: 0.5em;">No more requests!</mat-card-title>
+        <mat-card-title style="padding: 0.5em;">No more pending requests!</mat-card-title>
     </mat-card>
 </div>
